--- a/front/app/sass/rh-components/_modules.sass
+++ b/front/app/sass/rh-components/_modules.sass
@@ -53,14 +53,13 @@
 
 .rh-page-module-full-homepage
   @extend .flex-full-center
+  +background-greybars
   min-height: calc(100vh - #{$header-height-homepage})
 
 .rh-page-module-full-subpage
-  @extend .rh-page-module-bars
   @extend .flex-full-center
   min-height: calc(100vh - #{$header-height-subpage})
 
 .rh-page-module-full-subpage-bc
-  @extend .rh-page-module-bars
   @extend .flex-full-center
   min-height: calc(100vh - #{$header-height-subpage} - #{$breadcrumbs-height})
