--- a/front/app/sass/rh-components/_pagination.sass
+++ b/front/app/sass/rh-components/_pagination.sass
@@ -24,5 +24,4 @@
     color: #fff
     background: $grey-12
   span.disabled
-    padding: $base-line-height-half $base-line-height
-    color: $grey-light
+    background-color: transparent
